crates/macro/ui-tests/missing-catch.stderr
error[E0277]: the trait bound `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>: FromWasmAbi` is not satisfied
 --> ui-tests/missing-catch.rs:6:9
  |
3 | #[wasm_bindgen]
  | --------------- in this procedural macro expansion
...
6 |     pub fn foo() -> Result<JsValue, JsValue>;
  |            ^^^ the trait `FromWasmAbi` is not implemented for `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>`
  |
  = help: the following other types implement trait `FromWasmAbi`:
            bool
            char
            isize
            i8
            i16
            i32
            i64
            i128
          and $N others
  = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>: FromWasmAbi` is not satisfied
 --> ui-tests/missing-catch.rs:3:1
  |
3 | #[wasm_bindgen]
  | ^^^^^^^^^^^^^^^ the trait `FromWasmAbi` is not implemented for `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>`
  |
  = help: the following other types implement trait `FromWasmAbi`:
            bool
            char
            isize
            i8
            i16
            i32
            i64
            i128
          and $N others
  = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>: FromWasmAbi` is not satisfied
 --> ui-tests/missing-catch.rs:6:18
  |
6 |     pub fn foo() -> Result<JsValue, JsValue>;
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromWasmAbi` is not implemented for `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>`
  |
  = help: the following other types implement trait `FromWasmAbi`:
            bool
            char
            isize
            i8
            i16
            i32
            i64
            i128
          and $N others
